[gd_scene load_steps=2 format=3 uid="uid://c5rfo7vg5fs5y"]

[ext_resource type="Script" path="res://main.gd" id="1_bekef"]

[node name="main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_bekef")

[node name="CenterContainer" type="CenterContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
offset_left = 181.0
offset_top = 84.0
offset_right = 299.0
offset_bottom = 185.0

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/VBoxContainer"]
offset_right = 118.0
offset_bottom = 31.0

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer/HBoxContainer"]
offset_top = 2.0
offset_right = 47.0
offset_bottom = 28.0
text = "PORT:"

[node name="PortLineEdit" type="LineEdit" parent="CenterContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
offset_left = 51.0
offset_right = 118.0
offset_bottom = 31.0
text = "3007"
placeholder_text = "9999"
max_length = 4

[node name="HostButton" type="Button" parent="CenterContainer/VBoxContainer"]
offset_top = 35.0
offset_right = 118.0
offset_bottom = 66.0
text = "Host"

[node name="JoinButton" type="Button" parent="CenterContainer/VBoxContainer"]
offset_top = 70.0
offset_right = 118.0
offset_bottom = 101.0
text = "Join"

[connection signal="pressed" from="CenterContainer/VBoxContainer/HostButton" to="." method="_on_host_button_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/JoinButton" to="." method="_on_join_button_pressed"]
